fix: move chevron css from source control view to icon css

--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -191,3 +191,10 @@
 .MaskIconCircleFilled {
   mask-image: url(/icons/circle-filled.svg);
 }
+
+.Chevron {
+  width: 16px;
+  height: 16px;
+  contain: strict;
+  position: relative;
+}
