--- a/static/css/parts/ViewletSourceControl.css
+++ b/static/css/parts/ViewletSourceControl.css
@@ -64,3 +64,33 @@
 
 .SourceControlBadge {
 }
+
+.SplitButton {
+  background: rgb(35, 112, 112);
+  width: 100%;
+  height: 30px;
+  contain: strict;
+  display: flex;
+  display: flex;
+}
+
+.SplitButtonContent {
+  contain: strict;
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.SplitButtonSeparator {
+  height: 90%;
+  width: 1px;
+  background: rgba(255, 255, 255, 0.4);
+  contain: strict;
+}
+
+.SplitButtonDropDown {
+  width: 30px;
+  height: 100%;
+  contain: strict;
+}
