--- a/static/css/parts/ViewletSourceControl.css
+++ b/static/css/parts/ViewletSourceControl.css
@@ -66,7 +66,7 @@
 }
 
 .SplitButton {
-  background: rgb(35, 112, 112);
+  background: var(--SplitButtonBackground, rgb(35, 112, 112));
   width: 100%;
   height: 30px;
   contain: strict;
