--- a/static/css/parts/ViewletSourceControl.css
+++ b/static/css/parts/ViewletSourceControl.css
@@ -67,10 +67,10 @@
 
 .SplitButton {
   background: var(--SplitButtonBackground, rgb(35, 112, 112));
+  color: var(--SplitButtonForeground, white);
   width: 100%;
   height: 30px;
   contain: strict;
-  display: flex;
   display: flex;
 }
 
