--- a/static/css/parts/ViewletSourceControl.css
+++ b/static/css/parts/ViewletSourceControl.css
@@ -66,11 +66,11 @@
 }
 
 .SplitButton {
-  background: rgb(35, 112, 112);
+  background: var(--SplitButtonBackground, rgb(35, 112, 112));
+  color: var(--SplitButtonForeground, white);
   width: 100%;
   height: 30px;
   contain: strict;
-  display: flex;
   display: flex;
 }
 
