--- a/static/css/parts/Menu.css
+++ b/static/css/parts/Menu.css
@@ -62,16 +62,12 @@
   height: 11px;
   position: relative;
   contain: strict;
+  display: flex;
+  align-items: center;
 }
 
-.MenuItemSeparator::after {
-  position: absolute;
-  content: '';
-  display: block;
+.MenuItemSeparatorLine {
   width: 100%;
   height: 1px;
   background: var(--MenuItemSeparatorBackground, #606060);
-  top: 50%;
-  left: 50%;
-  translate: -50% -50%;
 }
