feature: make split button focusable

--- a/static/css/parts/Button.css
+++ b/static/css/parts/Button.css
@@ -20,7 +20,9 @@
 }
 
 .SplitButtonContent:where(:hover),
-.SplitButtonDropDown:where(:hover) {
+.SplitButtonContent:where(:focus),
+.SplitButtonDropDown:where(:hover),
+.SplitButtonDropDown:where(:focus) {
   background: var(--SplitButtonHoverBackground, #387674);
 }
 
