--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -197,4 +197,8 @@
   height: 16px;
   contain: strict;
   position: relative;
+  mask-size: 16px;
+  mask-position: 50% 50%;
+  mask-repeat: no-repeat;
+  background: currentColor;
 }
