--- a/static/css/parts/ViewletAbout.css
+++ b/static/css/parts/ViewletAbout.css
@@ -13,12 +13,50 @@
   contain: strict;
   background: #1f1f1f;
   display: flex;
-  place-items: center;
-  place-content: center;
+  padding: 30px;
   flex-direction: column;
+}
+
+.AboutContentWrapper {
+  display: flex;
+  gap: 24px;
+  flex: 1;
+}
+
+.AboutContentLeft {
+  display: flex;
+}
+
+.AboutInfoIcon {
+  width: 50px;
+  height: 50px;
+  contain: strict;
+  position: relative;
+  mask-size: 50px;
+}
+
+.AboutContentRight {
+  display: flex;
+  flex-direction: column;
+}
+
+.AboutContentRightHeading {
+  font-size: 25px;
+  contain: strict;
+  height: 35px;
+  width: 100%;
+}
+
+.AboutInfoIcon {
+  background: var(--InfoIconForeground, #3794ff);
 }
 
 .InfoRow {
   display: flex;
   gap: 10px;
+}
+
+.AboutButtons {
+  justify-content: end;
+  display: flex;
 }
