--- a/static/css/parts/ViewletDialog.css
+++ b/static/css/parts/ViewletDialog.css
@@ -83,7 +83,7 @@
 }
 
 .DialogToolBar {
-  height: 20px;
+  height: 26px;
   contain: strict;
   justify-content: end;
   display: flex;
@@ -120,8 +120,11 @@
   font-size: 18px;
   line-height: 22px;
   contain: strict;
-  height: 35px;
+  height: 48px;
   width: 100%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 8px;
 }
 
 .DialogMessage {
