fix: diff editor position

--- a/static/css/parts/ViewletDiffEditor.css
+++ b/static/css/parts/ViewletDiffEditor.css
@@ -14,7 +14,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: relative !important;
 }
 
 .Deletion {
