refactor: simplify sash css

--- a/static/css/parts/ViewletLayout.css
+++ b/static/css/parts/ViewletLayout.css
@@ -1,5 +1,4 @@
-.SashHorizontal,
-.SashVertical {
+.Sash {
   position: fixed;
   contain: strict;
   z-index: 1;
@@ -18,19 +17,4 @@
 .SashVisible {
   display: flex;
   justify-content: center;
-}
-
-.SashVerticalContent,
-.SashHorizontalContent {
-  background: #444444;
-}
-
-.SashVerticalContent {
-  width: 1px;
-  height: 100%;
-}
-
-.SashHorizontalContent {
-  width: 100%;
-  height: 1px;
 }
