feature: use separate layer for widgets to avoid compositing with sash

--- a/static/css/parts/Widgets.css
+++ b/static/css/parts/Widgets.css
@@ -4,6 +4,7 @@
   inset: 0;
   pointer-events: none;
   z-index: 1;
+  backface-visibility: hidden;
 }
 
 /* TODO maybe hide widgets container if empty*/
