--- a/static/css/parts/ViewletTitleBarIcon.css
+++ b/static/css/parts/ViewletTitleBarIcon.css
@@ -4,9 +4,9 @@
   background-repeat: no-repeat;
   background-size: 16px;
   contain: strict;
-  flex-basis: 30px;
-  flex-grow: 0;
-  flex-shrink: 0;
+  flex-basis: 30px !important;
+  flex-grow: 0 !important;
+  flex-shrink: 0 !important;
   height: 100%;
   width: 30px;
 }
