--- a/static/css/parts/ViewletDialog.css
+++ b/static/css/parts/ViewletDialog.css
@@ -125,12 +125,14 @@
   display: flex;
   align-items: center;
   margin-bottom: 8px;
+  user-select: text;
 }
 
 .DialogMessage {
   display: flex;
   gap: 10px;
   contain: content;
+  user-select: text;
 }
 
 .DialogButtons {
