--- a/static/css/parts/ViewletActivityBar.css
+++ b/static/css/parts/ViewletActivityBar.css
@@ -1,8 +1,5 @@
 .ActivityBar {
   color: var(--ActivityBarForeground);
-}
-
-.ActivityBar {
   display: flex;
   flex-direction: column;
 }
@@ -19,10 +16,6 @@
   mask-size: var(--MaskIconSize);
   mask-position: 50% 50%;
   background: currentColor;
-}
-
-.ActivityBarItem[title='Settings'] {
-  margin-top: auto;
 }
 
 .ActivityBarItem:hover {
@@ -47,11 +40,9 @@
   color: var(--ActivityBarActiveForeground);
 }
 
-/* .ActivityBarItem:focus .ActivityBarItemIcon,
-.ActivityBarItem:hover .ActivityBarItemIcon,
-.ActivityBarItem[aria-selected] .ActivityBarItemIcon {
-  filter: none;
-} */
+.MarginTopAuto {
+  margin-top: auto;
+}
 
 .ActivityBarItemBadge {
   background: var(--BadgeBackground);
