feature: add line between hover contents

--- a/static/css/parts/ViewletEditorHover.css
+++ b/static/css/parts/ViewletEditorHover.css
@@ -16,7 +16,6 @@
   gap: 3px;
   min-height: 20px;
   min-width: 400px;
-  padding: 4px 8px;
   position: absolute;
   user-select: text;
 }
@@ -30,6 +29,11 @@
   font-feature-settings: var(--EditorFontFeatureSettings);
   tab-size: var(--EditorTabSize);
   font-display: block;
+  padding: 4px 8px;
+}
+
+.HoverDisplayString:not(:first-child) {
+  border-top: 1px solid rgba(149, 162, 157, 0.5);
 }
 
 .HoverDocumentation {
