refactor: simplify hover dom

--- a/static/css/parts/ViewletEditorHover.css
+++ b/static/css/parts/ViewletEditorHover.css
@@ -47,6 +47,10 @@
   display: flex;
 }
 
+.HoverProblemMessage {
+  content: content;
+}
+
 .HoverProblemDetail {
   opacity: 0.6;
   contain: content;
