feature: set side bar title to contain strict

--- a/static/css/parts/ViewletSideBar.css
+++ b/static/css/parts/ViewletSideBar.css
@@ -23,5 +23,6 @@
   text-overflow: ellipsis;
   text-transform: uppercase;
   padding-left: 12px;
-  contain: content;
+  contain: strict;
+  flex: 1;
 }
