--- a/static/css/parts/Button.css
+++ b/static/css/parts/Button.css
@@ -61,13 +61,20 @@
   padding: 5px 10px;
 }
 
+.Button:where(:focus) {
+  background: var(--SplitButtonHoverBackground, #387674);
+  outline: 1px solid var(--FocusBorder);
+  outline-offset: 2px;
+}
+
 .ButtonPrimary {
   background: var(--SplitButtonBackground, rgb(35, 112, 112));
   color: var(--SplitButtonForeground, white);
   cursor: pointer;
 }
 
-.ButtonPrimary:where(:hover) {
+.ButtonPrimary:where(:hover),
+.ButtonPrimary:where(:focus) {
   background: var(--SplitButtonHoverBackground, #387674);
 }
 
@@ -77,6 +84,7 @@
   cursor: pointer;
 }
 
-.ButtonSecondary:where(:hover) {
+.ButtonSecondary:where(:hover),
+.ButtonSecondary:where(:focus) {
   background: var(--ButtonSecondaryHoverBackground, #45494e);
 }
