feature: add scrollbar active color

--- a/static/css/parts/ScrollBar.css
+++ b/static/css/parts/ScrollBar.css
@@ -6,6 +6,10 @@
   background: var(--EditorScrollBarBackground, rgba(57, 71, 71, 0.6));
 }
 
+.ScrollBarThumbActive {
+  background: var(--ScrollBarThumbActiveBackground, rgba(83, 100, 100, 0.4));
+}
+
 .ScrollBarThumbHorizontal {
   height: 100%;
   width: auto;
