feature: add colors for debug icons

--- a/static/css/parts/ViewletRunAndDebug.css
+++ b/static/css/parts/ViewletRunAndDebug.css
@@ -57,3 +57,11 @@
   contain: strict;
   height: 30px;
 }
+
+.DebugContinue,
+.DebugStepOver,
+.DebugPause,
+.DebugStepInto,
+.DebugStepOut {
+  background: #75beff;
+}
