feature: improve highlighting for booleans in debug view (#4981)

--- a/static/css/parts/ViewletRunAndDebug.css
+++ b/static/css/parts/ViewletRunAndDebug.css
@@ -39,6 +39,14 @@
   color: rgb(128, 134, 139);
 }
 
+.DebugValueString {
+  color: #8caec1;
+}
+
+.DebugValueBoolean {
+  color: #cd6564;
+}
+
 .DebugMessage,
 .DebugPausedMessage {
   font-style: italic;
