--- a/static/css/parts/ViewletRunAndDebug.css
+++ b/static/css/parts/ViewletRunAndDebug.css
@@ -12,8 +12,11 @@
   padding-left: 3px;
   display: flex;
   align-items: center;
-  font-size: 12px;
   gap: 2px;
+  color: var(--DebugSectionHeaderForeground, #bcbebe);
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 11px;
 }
 
 .DebugMaskIcon {
@@ -37,7 +40,7 @@
 .DebugRow {
   contain: strict;
   width: 100%;
-  height: 20px;
+  height: 22px;
   user-select: text;
   color: rgb(188, 190, 190);
 }
