feature: improve highlighting for debug functions

--- a/static/css/parts/DebugValue.css
+++ b/static/css/parts/DebugValue.css
@@ -6,11 +6,9 @@
   color: hsl(252deg 100% 75%);
 }
 
-.DebugValueUndefined {
-  color: rgb(128, 134, 139);
-}
-
-.DebugValueObject {
+.DebugValueUndefined,
+.DebugValueObject,
+.DebugValueFunction {
   color: rgb(128, 134, 139);
 }
 
