--- a/static/css/parts/ViewletRunAndDebug.css
+++ b/static/css/parts/ViewletRunAndDebug.css
@@ -43,9 +43,16 @@
   height: 22px;
   user-select: text;
   color: rgb(188, 190, 190);
+  display: flex;
+  align-items: center;
 }
 
 .DebugValue {
   contain: content;
   white-space: nowrap;
+}
+
+.DebugValueScopeName {
+  font-weight: 700;
+  font-size: 11px;
 }
