feature: truncate long debug values

--- a/static/css/parts/DebugValue.css
+++ b/static/css/parts/DebugValue.css
@@ -10,6 +10,8 @@
 .DebugValueObject,
 .DebugValueFunction {
   color: rgb(128, 134, 139);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .DebugValueString {
