--- a/static/css/parts/DebugValue.css
+++ b/static/css/parts/DebugValue.css
@@ -8,7 +8,8 @@
 
 .DebugValueUndefined,
 .DebugValueObject,
-.DebugValueFunction {
+.DebugValueFunction,
+.DebugValueGetter {
   color: rgb(128, 134, 139);
   overflow: hidden;
   text-overflow: ellipsis;
