--- a/static/css/parts/ViewletSearch.css
+++ b/static/css/parts/ViewletSearch.css
@@ -61,6 +61,12 @@
   margin-top: 6px;
 }
 
+.SearchFieldButtons {
+  padding-top: 3px;
+  padding-right: 2px;
+  contain: content;
+}
+
 .SearchFieldButton {
   position: relative;
   background: transparent;
