--- a/static/css/parts/ViewletSearch.css
+++ b/static/css/parts/ViewletSearch.css
@@ -19,6 +19,7 @@
   flex-direction: column;
   flex: 1;
   contain: content;
+  gap: 6px;
 }
 
 .SearchToggleButton {
@@ -30,6 +31,7 @@
   width: 16px;
   margin: 0 2px;
   border-radius: 0;
+  /* TODO contain */
 }
 
 .SearchToggleButton:where(:hover) {
@@ -57,11 +59,8 @@
   display: flex;
   border: 1px solid var(--InputBoxBorder, rgb(55, 65, 63));
   background: var(--InputBoxBackground, rgb(36, 41, 42));
-  contain: content;
-}
-
-.SearchFieldReplace {
-  margin-top: 6px;
+  contain: strict;
+  height: 24px;
 }
 
 .SearchFieldButtons {
