--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -1,14 +1,14 @@
 .MaskIcon,
 .Icon {
   display: block;
-  position: absolute;
-  inset: 0;
   background: currentColor;
   mask-repeat: no-repeat;
   mask-size: var(--MaskIconSize);
   mask-position: 50% 50%;
   pointer-events: none;
   contain: strict;
+  width: 100%;
+  height: 100%;
 }
 
 .ColoredMaskIcon {
