--- a/static/css/parts/MaskIcon.css
+++ b/static/css/parts/MaskIcon.css
@@ -314,6 +314,10 @@
   mask-image: url(/icons/debug-stop.svg);
 }
 
+.MaskIconPreserveCase {
+  mask-image: url(/icons/preserve-case.svg);
+}
+
 .Chevron {
   width: 16px;
   height: 16px;
